--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="Stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="container">
 
+        <nav class="bx navbar">
+            <div class="header-logo">
+                <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\logo.jpg">
+            </div>
+            <div class="header-link">
+                <a href="#">Contact</a>
+                <a href="#">Students</a>
+                <a href="#">Material</a>
+            </div>
+        </nav>
+        
+    <div class="bx sam">
+        <div class="sam-1 sam-cta">
+        <h1>Time to Learn English in a Smart way</h1>
+        <p>Com os métodos exclusivos da LearnSmart,você irá aprender de uma forma inteligente,
+        sendo 100% eficaz e livre!
+        </p>
+        <button type="button">Inscreva-se</button>
+    </div>
+    <div class="sam-1 sam-image">
+        <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\logo.jpg" alt="LearnSmart">
+    </div>
+</div>
+
+<div class="bx content">
+    <h2>Métodos exclusivos</h2>
+    <div class="content-info">
+        <div>
+            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\Vocabulary Catcher.jpg" alt="Vocabulary Catcher">
+            <p><strong>Vocabulary Catcher</strong></p>
+        </div>
+        <div>
+            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\The Kid's method.jpg" alt="The Kid's Method">
+            <p><strong>The Kid's Method</strong></p>
+        </div>
+        <div>
+            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\The Ghost Technique.jpg" alt="The Ghost Technique">
+            <p><strong>The Ghost Technique</strong></p>
+        </div>
+    </div>
+</div>
+</body>
+</html>
