--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button type="button">Inscreva-se</button>
     </div>
     <div class="sam-1 sam-image">
-        <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\logo.jpg" alt="LearnSmart">
+        <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\logo.webp" alt="LearnSmart">
     </div>
 </div>
 
@@ -38,15 +38,15 @@
     <h2>Métodos exclusivos</h2>
     <div class="content-info">
         <div>
-            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\Vocabulary Catcher.jpg" alt="Vocabulary Catcher">
+            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\Vocabulary Catcher.webp" alt="Vocabulary Catcher">
             <p><strong>Vocabulary Catcher</strong></p>
         </div>
         <div>
-            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\The Kid's method.jpg" alt="The Kid's Method">
+            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\The Kid's method.webp" alt="The Kid's Method">
             <p><strong>The Kid's Method</strong></p>
         </div>
         <div>
-            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\The Ghost Technique.jpg" alt="The Ghost Technique">
+            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\The Ghost Technique.webp" alt="The Ghost Technique">
             <p><strong>The Ghost Technique</strong></p>
         </div>
     </div>
