--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <nav class="bx navbar">
             <div class="header-logo">
-                <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\logo.jpg">
+                <img src="Images/logo.webp">
             </div>
             <div class="header-link">
                 <a href="#">Contact</a>
@@ -30,7 +30,7 @@
         <button type="button">Inscreva-se</button>
     </div>
     <div class="sam-1 sam-image">
-        <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\logo.webp" alt="LearnSmart">
+        <img src="Images/logo.webp" alt="LearnSmart">
     </div>
 </div>
 
@@ -38,15 +38,15 @@
     <h2>Métodos exclusivos</h2>
     <div class="content-info">
         <div>
-            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\Vocabulary Catcher.webp" alt="Vocabulary Catcher">
+            <img src="Images/Vocabulary Catcher.webp" alt="Vocabulary Catcher">
             <p><strong>Vocabulary Catcher</strong></p>
         </div>
         <div>
-            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\The Kid's method.webp" alt="The Kid's Method">
+            <img src="Images/The Kid's method.webp" alt="The Kid's Method">
             <p><strong>The Kid's Method</strong></p>
         </div>
         <div>
-            <img src="C:\Users\natha\desktop\Archives\Programming\Landing-Page\Images\The Ghost Technique.webp" alt="The Ghost Technique">
+            <img src="Images/The Ghost Technique.webp" alt="The Ghost Technique">
             <p><strong>The Ghost Technique</strong></p>
         </div>
     </div>
